src/pages/main/main.css
.main {
  background-image: url("../../../public/image/Rectangle 17515.png");
  background-size: 100%;
  width: 100%;
  height: 1024px;
  bottom: 20px;
  position: relative;
}

.main_block {
  width: 690px;
  height: 640px;
  margin-top: 187px;
  margin-left: 119px;
  backdrop-filter: blur(20px);
  border-radius: 16px;
  padding-top: 92px;
  padding-left: 60px;
}

.main_block_text {
  width: 570px;
  height: 360px;
}

.main_block_text h1 {
  color: white;
  font-size: 90px;
}

.button_catalog {
  margin-top: 32px;
  margin-left: 60px;
  width: 280px;
  height: 64px;
  border-radius: 16px;
  border: none;
  font-size: 20px;
  cursor: pointer;
}

.button_catalog:hover {
  color: var(--grey-text-color);
  background: var(--white-dark-bg-color);
}

/* .main_man_woomen {
  width: 100%;
  height: 280px;
  margin-top: 120px;
  /* margin-left: 120px; */

/* display: flex; */
/* justify-content: space-between; */
/* } 
 .main_woomen_block {
  /* width: 562px;
  height: 280px;
  /* margin-right: 2%; */
/* background-image: url("../../../image/image 30.png");
  cursor: pointer;
} */

.main_man_block {
  width: 562px;
  height: 280px;
  margin-left: 2%;
  margin-right: 21%;
  background-image: url("../../../public/image/image 31.png");
  border-radius: 36px;
}
.main_man_block_text:hover {
  color: var(--grey-text-color);
  background: var(--white-dark-bg-color);
}

.main_man_block_text {
  width: 186px;
  height: 70px;
  background-color: #e4e4e4;
  border-radius: 36px;
  padding-top: 16px;
  font-size: 24px;
  margin-top: 12px;
  text-align: center;
  cursor: pointer;
}

.line {
  width: 115px;
  height: 2px;
  background-color: black;
  margin-left: 35px;
}

.line_1 {
  width: 86px;
  height: 2px;
  background-color: black;
  margin-left: 49px;
}

.main_vector {
  width: 100%;
  margin-top: 120px;
}

.main_vector img {
  width: 100%;
}

.main_block_new {
  background-color: #d9d9d9;
  width: 100%;
  height: 643px;
  margin-top: -10px;
  text-align: center;
}
.main_block_new h1 {
  font-size: 45px;
  font-weight: normal;
}
.slider_sale {
  margin-top: 120px;
  font-weight: normal;
}
.text {
  z-index: 2;
}
/* .sale_line {
  z-index: 1; */
/*display: flex;*/
/*white-space: nowrap;*/
/* position: relative; */
/*top: 690px;*/
/* left: 5px; */
/* width: 100%; */
/* height: 67px; */

/* top: 130px; */

/*height: 200px;*/
/* animation: line 3s infinite linear; */
/*transform: rotate(-12deg);*/
/* } */

/* .sale_line_1 { */
/*display: flex;*/
/*bottom: 40px;*/
/*top: 580px;*/
/*position: relative;*/
/* width: 100%; */
/* left: 5px; */
/* height: 67px; */
/* will-change: transform; */
/*white-space: nowrap;*/
/*bottom: 550px;*/
/*transform: rotate(12deg);*/
/* animation: line1 3s infinite linear; */
/* } */

/* .sale_img_line { */
/* padding-left: 10%; */

/* position: relative;

  width: 100%;
  height: 300px;

  overflow: hidden;
} */

/* @keyframes line {
  from {
    transform: translateY(0) rotate(8deg) translateX(0);
  }
  to {
    transform: translateY(-80%) translateX(-26%) rotate(8deg);
  }
}
@keyframes line1 {
  from {
    transform: translateY(0) rotate(-8deg) translateX(0);
  }
  to {
    transform: translateY(80%) translateX(-26%) rotate(-8deg);
  }
} */

/*@media (max-width: 768px) {*/
/*  .main_block_new .main_block {*/
/*    width: 40%;*/
/*  }*/
/*}*/

.marquee {
  color: black;
  font-weight: bold;
  display: flex;
  align-items: center;
  position: absolute;
  z-index: 100;
  width: 130vw;
  font-family: "Roboto";
  font-size: 24px;
  font-weight: 700;
  line-height: 36px;
  letter-spacing: 0.01em;
  height: 80px;
  background-color: var(--yellow-ribbon-color);
  top: 50%;
}

.track {
  display: flex;
  align-items: center;
  width: 6000px;
  white-space: nowrap;
  will-change: transform;
  animation: marquee 15s linear infinite;
}

@keyframes marquee {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

.marquee-content {
  display: flex;
  gap: 10px;
}

.marquee-centered {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 100%;
  padding-left: -10px;
  padding-right: -10px;
  /* border: 1px solid red; */
  overflow: hidden;
  height: 369px;
}
.marquee-rotate-right {
  top: 120px;
  transform: rotate(-6.39deg);
}
.marquee-rotate-left {
  top: 120px;
  transform: rotate(6.39deg);
}

